# bazel-pandoc-example

./: .bazelrc  BUILD  README.md  WORKSPACE  example.pptx  example_beamer.tex  index.html  pdf_to_image.py  requirements.txt  svg2pdf.py
.github/: workflow.yml
.github/workflows/: workflow.yml
example/: BUILD.bazel  default.css  default.js  example.md  example.puml  example.tex  example_beamer.md  example_pptx.md
