load("@bazel_pandoc//:pandoc.bzl", "pandoc")
load("@bazel_latex//:latex.bzl", "latex_document", "latex_to_svg")
load("@py_deps//:requirements.bzl", "requirement")

pandoc(
    name = "example",
    src = ":example.md",
    from_format = "markdown",
    to_format = "revealjs",
    output = "index.html",
    options = [
        "--standalone",
        "--self-contained",
        "--incremental",
        "--include-in-header=default.js",
        "--include-in-header=default.css",
        "--include-in-header=code_block.css",
        "-V data-transition=none"
    ],
    data = [
        "example.svg",
        "default.js",
        "default.css",
        "code_block.css",
        #":example_svg"
    ],
)

pandoc(
    name = "example_pptx",
    src = ":example_pptx.md",
    from_format = "markdown",
    to_format = "pptx",
    output = "example.pptx",
    options = [
        "--standalone",
        "--self-contained",
    ],
    data = [
        "example.svg",
    ],
)

pandoc(
    name = "example_beamer_tex",
    src = ":example_beamer.md",
    from_format = "markdown",
    to_format = "beamer",
    output = "example_beamer.pdf",
    options = [
        "--standalone",
        "--self-contained",
        "--pdf-engine=/usr/bin/pdflatex",
    ],
    data = [
        "example.pdf",
    ],
)

genrule(
    name = "example_puml",
    srcs = [":example.puml"],
    outs = ["example.svg"],
    cmd = "GRAPHVIZ_DOT=/usr/bin/dot; $(location //third_party/plantuml:plantuml) -nometadata -tsvg -p < $(location :example.puml) > $(OUTS)",
    tools = ["//third_party/plantuml:plantuml"],
)

genrule(
    name = "example_test",
    srcs = [":example.puml"],
    outs = ["example.png"],
    cmd = "GRAPHVIZ_DOT=/usr/bin/dot; $(location //third_party/plantuml:plantuml) -testdot; ls -a .; cp testdot.png $(OUTS)",
    tools = ["//third_party/plantuml:plantuml"],
)



genrule(
    name = "example_svg_2_pdf",
    srcs = [":example.svg"],
    outs = ["example.pdf"],
    cmd = "$(location //:svg2pdf) $(location :example.svg) $(OUTS)",
    tools = ["//:svg2pdf"],
)

latex_document(
    name = "example_tex",
    srcs = ["@bazel_latex//packages:drawstack"],
    main = ":example.tex",
)

latex_to_svg(
    name = "example_svg",
    src = ":example_tex",
)
